--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,3 +74,54 @@ a {
     a{
       color: green;
     }
+
+         @keyframes wavingHand {
+           0% {
+             transform: rotate(0deg);
+           }
+    
+           10% {
+             transform: rotate(10deg);
+           }
+    
+           20% {
+             transform: rotate(-10deg);
+           }
+    
+           30% {
+             transform: rotate(10deg);
+           }
+    
+           40% {
+             transform: rotate(-10deg);
+           }
+    
+           50% {
+             transform: rotate(5deg);
+           }
+    
+           60% {
+             transform: rotate(-5deg);
+           }
+    
+           70% {
+             transform: rotate(2deg);
+           }
+    
+           80% {
+             transform: rotate(-2deg);
+           }
+    
+           90% {
+             transform: rotate(1deg);
+           }
+    
+           100% {
+             transform: rotate(0deg);
+           }
+         }
+    
+         .animate-waving-hand {
+          display: inline-block;
+           animation: wavingHand 4s infinite;
+         }
